# bibtex-autocomplete

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  makefile  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml
bibtexautocomplete/: __init__.py  __main__.py  abstractlookup.py  autocomplete.py  bibtex.py  constants.py  defs.py  lookup.py  lookup_doi.py
bibtexautocomplete/APIs/: __init__.py  arxiv.py  crossref.py  dblp.py  doi.py  inspire.py  inspire_hep.py  openalex.py  researchr.py  semantic_scholar.py  semanticscholar.py  unpaywall.py
bibtexautocomplete/bibtex/: author.py  base_field.py  constants.py  entry.py  fields.py  io.py  matching.py  normalize.py
bibtexautocomplete/core/: __init__.py  apis.py  autocomplete.py  data_dump.py  main.py  parser.py  threads.py
bibtexautocomplete/lookups/: abstract_base.py  abstract_entry_lookup.py  condition_mixin.py  https.py  lookups.py  multiple_mixin.py  search_mixin.py
bibtexautocomplete/utils/: ansi.py  constants.py  functions.py  logger.py  only_exclude.py  safe_json.py
scripts/: bibtexautocomplete  btac
tests/: bib_0.bib  test_0.bib  test_1.bib  test_1_defs.py  test_1_utils.py  test_2_bibtex.py  test_3_lookup.py  test_4_APIs.py  test_4_parser.py  test_5_options.py  test_6_main.py  test_9_APIs.py  test_bibtex.py  test_bibtex_io.py  test_lookup.py  test_lookup_doi.py
tests/bibs/: doi-to-url.btac.bib.exp  field-selection-and-entrytype.btac.bib.exp  field-selection-force-prefix.btac.bib.exp  field-selection-force.btac.bib.exp  field-selection-overwrite.btac.bib.exp  field-selection.btac.bib.exp  format-align.btac.bib.exp  format-all.btac.bib.exp  format-comma.btac.bib.exp  format-leading.btac.bib.exp  format-space.btac.bib.exp  format-space2.btac.bib.exp  format-unicode.btac.bib.exp  format-uppercase-all.btac.bib.exp  format-uppercase-unicode.btac.bib.exp  format-uppercase.btac.bib.exp  input.bib  input.btac.bib.exp  latex-to-unicode.bib  mark-ignore.btac.bib.exp  mark-prefix.btac.bib.exp  mark.btac.bib.exp  overwrite-prefix.btac.bib.exp  overwrite-selection-prefix.btac.bib.exp  overwrite-selection.btac.bib.exp  (+8 more)
